# rust-workspace-base

./: .gitignore  Cargo.toml  LICENSE  readme.md  run_tests.sh
.cargo/: config.toml
.github/workflows/: rust.yml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  error.rs  lib.rs
crates/libs/lib-core/src/_dev_utls/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: base.rs  error.rs  mod.rs
crates/libs/lib-core/src/model/store/: error.rs  mod.rs
crates/libs/lib-fs/: Cargo.toml
crates/libs/lib-fs/src/: config.rs  error.rs  fs_sub.rs  lib.rs  tests.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: envs.rs
crates/services/service/: Cargo.toml
crates/services/service/examples/: quick-dev.rs
crates/services/service/src/: lib.rs  main.rs
crates/services/test-service/: Cargo.toml
crates/services/test-service/examples/: quick-dev.rs
crates/services/test-service/src/: error.rs  main.rs
