[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["{{authors}}"]
description = "{{description}}"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"       # For experimental dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils", # e.g., base64, time.
    "crates/libs/lib-core",  # e.g., model, ctx, config.
    "crates/libs/lib-fs",    # e.g., fs, file, dir, etc.

    # -- Application Services
    "crates/services/test-service",

    # -- Tools
    # "crates/tools/gen-key",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#Other
derive_more = {version = "1", features = ["from"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }

# Dev
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"
