[package]
name = "lib-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_db = { workspace = true }
grapple_utils = { workspace = true }

# -- App Libs
# lib-utils = { path = "../../libs/lib-utils" }
# -- Async
tokio = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# -- Others
derive_more = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }