[package]
name = "lib-fs"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App libs
lib-utils = { path = "../../libs/lib-utils" }
# -- Async
tokio = { workspace = true }
# -- Others
derive_more = { workspace = true }

[dev-dependencies]
anyhow = "1"