[package]
name = "lib-utils"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
base64 = "0.21"
time = { workspace = true }