[package]
name = "service"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# -- My Libs
grapple_db = { workspace = true }
grapple_utils = { workspace = true }

# -- App Libs
lib-core = { path = "../../libs/lib-core" }

# -- Async
tokio = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# -- Other
derive_more = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }
chrono = "0.4"