[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-core = { path = "../../libs/lib-core" }
lib-fs = { path = "../../libs/lib-fs" }

# -- Async
tokio = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# -- Other
derive_more = { workspace = true }
time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }
chrono = "0.4.38"