[package]
name = "test-service"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-core = { path = "../../libs/lib-core" }
lib-fs = { path = "../../libs/lib-fs" }

# -- Async
tokio = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# -- Other
derive_more = { workspace = true }
time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }
chrono = "0.4"